[gd_scene load_steps=2 format=3 uid="uid://dxenyhg0h5k0o"]

[ext_resource type="Script" path="res://Entities/PickupSpawner/pickup_spawner.gd" id="1_vuu42"]

[node name="PickupSpawner" type="Node2D"]
script = ExtResource("1_vuu42")

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
